<android.support.design.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:background="@color/colorPrimaryBottom"
    android:layout_height="match_parent">

    <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        android:id="@+id/activity_main"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginLeft="@dimen/keyline_left_1"
        android:layout_marginRight="@dimen/keyline_right"
        tools:context="paymanager.dimpesh.dimpeshpaymanager.MainActivity">


        <TextView
            android:textColor="@color/colorWhite"
            android:id="@+id/textView_head"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentTop="true"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="20dp"
            android:gravity="center"
            android:text="@string/app_main_head"
            android:textSize="@dimen/text_head" />

        <android.support.design.widget.TextInputLayout
            android:id="@+id/username_holder"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/textView_head">
            <EditText
                android:id="@+id/username"
                android:textColorHint="@color/colorAccent"
                android:layout_width="match_parent"
                android:textColor="@color/colorAccent"
                android:layout_height="wrap_content"
                android:hint="@string/username_str"
                android:layout_alignBottom="@+id/button"
                android:layout_alignParentEnd="true"
                android:layout_marginBottom="20dp" />


        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            android:id="@+id/password_holder"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/username_holder">

            <EditText
                android:id="@+id/password"
                android:textColorHint="@color/colorAccent"
                android:layout_width="356dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="40dp"
                android:textColor="@color/colorWhite"
                android:inputType="textPassword"
                android:hint="@string/password_str" />

        </android.support.design.widget.TextInputLayout>

        <Button
            android:background="@color/colorPrimaryDark"
            android:text="@string/signin_button"
            android:textColor="@color/colorWhite"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/password_holder"
            android:layout_marginTop="40dp"
            android:id="@+id/button"
            android:layout_alignParentStart="true"
            android:onClick="signIn"
            android:layout_alignParentEnd="true" />

        <TextView
            android:text="@string/register_str"
            android:textSize="@dimen/text_forgot"
            android:textColor="@color/colorAccent"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="27dp"
            android:onClick="signup"
            android:id="@+id/create_tv_id"
            android:layout_below="@+id/button"
            android:layout_centerHorizontal="true" />

        <TextView
            android:text="@string/forgot_str"
            android:textSize="@dimen/text_forgot"
            android:textColor="@color/colorAccent"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="25dp"
            android:onClick="forgot"
            android:id="@+id/textView"
            android:layout_below="@+id/create_tv_id"
            android:layout_centerHorizontal="true" />


    </RelativeLayout>
</android.support.design.widget.CoordinatorLayout>