<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent" android:layout_height="match_parent"
    android:background="@color/colorPrimaryBottom">

    <TextView
        android:text="@string/app_main_head"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="34dp"
        android:textSize="@dimen/text_head"
        android:textColor="@color/colorAccent"
        android:gravity="center"
        android:id="@+id/forgot_head" />

    <android.support.design.widget.TextInputLayout
        android:id="@+id/forgot_name_holder"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/forgot_head">

        <EditText
            android:id="@+id/forgot_name"
            android:textColorHint="@color/colorAccent"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/keyline_left_1"
            android:layout_marginRight="@dimen/keyline_right"
            android:layout_marginTop="40dp"
            android:hint="@string/forgot_name" />

    </android.support.design.widget.TextInputLayout>
    <android.support.design.widget.TextInputLayout
        android:id="@+id/forgot_email_holder"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/forgot_name_holder">

        <EditText
            android:id="@+id/forgot_email"
            android:textColorHint="@color/colorAccent"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/keyline_left_1"
            android:layout_marginRight="@dimen/keyline_right"
            android:layout_marginTop="40dp"
            android:hint="@string/forgot_email" />

    </android.support.design.widget.TextInputLayout>

    <Button
        android:text="@string/forgot_btn_str"
        android:layout_marginRight="@dimen/keyline_right"
        android:layout_marginLeft="@dimen/keyline_left_1"
        android:layout_width="match_parent"
        android:background="@color/colorPrimaryDark"
        android:textColor="@color/colorAccent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/forgot_email_holder"
        android:layout_marginTop="40dp"
        android:id="@+id/forgot_btn"
        android:onClick="sendPassword"
        />

</RelativeLayout>